# kioku

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: architecture.md
hooks/: hooks.json
hooks/memory/: session-end.sh  session-start.sh  stop.sh
kioku/: __init__.py  chunk.py  config.py  embed.py  errors.py  inject.py  rank.py  redact.py  retrieve.py  store_sqlite.py  transcript.py  vault.py
kioku/cli/: __init__.py  hook.py  main.py
schemas/: README.md  benchmark-result.schema.json  conflict.schema.json  memory.schema.json  settings.schema.json
templates/: CLAUDE.md.tmpl  decision.md.tmpl  pattern.md.tmpl  session-summary.md.tmpl
tests/: conftest.py
tests/integration/: test_etl.py  test_hybrid_search.py  test_session_end.py  test_session_start.py
tests/unit/: test_chunk.py  test_config.py  test_embed.py  test_inject.py  test_rank.py  test_redact.py  test_retrieve.py  test_transcript.py  test_vault.py
